--- a/force-app/main/default/classes/DonationAcknowledgementServiceTest.cls
+++ b/force-app/main/default/classes/DonationAcknowledgementServiceTest.cls
@@ -23,32 +23,286 @@ private class DonationAcknowledgementServiceTest {
     // (Assume template/folder already deployed in metadata, so just query in test)
   }
 
+  // ===== HELPER METHODS =====
+
+  /**
+   * Create a test contact with specified email (or default test email)
+   */
+  private static Contact createTestContact(String email) {
+    if (String.isBlank(email)) {
+      email = 'testuser@example.com';
+    }
+    Contact c = new Contact(
+      FirstName = 'Test',
+      LastName = 'User',
+      Email = email
+    );
+    insert c;
+    return c;
+  }
+
+  /**
+   * Create a test contact with no email address
+   */
+  private static Contact createTestContactWithoutEmail() {
+    Contact c = new Contact(
+      FirstName = 'No Email',
+      LastName = 'Contact'
+      // No Email field
+    );
+    insert c;
+    return c;
+  }
+
+  /**
+   * Create a test opportunity with specified parameters
+   */
+  private static Opportunity createTestOpportunity(
+    String name,
+    Contact contact,
+    Date ackDate,
+    Decimal amount
+  ) {
+    Opportunity opp = new Opportunity(
+      Name = name,
+      StageName = 'Closed Won',
+      CloseDate = Date.today(),
+      Amount = amount != null ? amount : 100,
+      ContactId = contact != null ? contact.Id : null
+    );
+    if (ackDate != null) {
+      opp.npsp__Acknowledgment_Date__c = ackDate;
+    }
+    insert opp;
+    return opp;
+  }
+
+  /**
+   * Create an OpportunityIdWrapper for invocable tests
+   */
+  private static DonationAcknowledgementService.OpportunityIdWrapper createWrapper(
+    List<Id> oppIds
+  ) {
+    DonationAcknowledgementService.OpportunityIdWrapper wrapper = new DonationAcknowledgementService.OpportunityIdWrapper();
+    wrapper.opportunityIds = oppIds;
+    return wrapper;
+  }
+
+  /**
+   * Create a list of wrapper inputs for invocable tests
+   */
+  private static List<DonationAcknowledgementService.OpportunityIdWrapper> createWrapperInput(
+    List<Id> oppIds
+  ) {
+    return new List<DonationAcknowledgementService.OpportunityIdWrapper>{
+      createWrapper(oppIds)
+    };
+  }
+
+  /**
+   * Create mixed scenario opportunities for comprehensive testing
+   * Returns a map with keys: 'success', 'acknowledged', 'noContact', 'noEmail'
+   */
+  private static Map<String, Opportunity> createMixedScenarioOpportunities() {
+    Contact validContact = [SELECT Id FROM Contact LIMIT 1];
+    Contact noEmailContact = createTestContactWithoutEmail();
+
+    Opportunity successOpp = createTestOpportunity(
+      'Success Opp',
+      validContact,
+      null,
+      100
+    );
+    Opportunity acknowledgedOpp = createTestOpportunity(
+      'Already Acknowledged Opp',
+      validContact,
+      Date.today().addDays(-1),
+      200
+    );
+    Opportunity noContactOpp = createTestOpportunity(
+      'No Contact Opp',
+      null,
+      null,
+      150
+    );
+    Opportunity noEmailOpp = createTestOpportunity(
+      'No Email Opp',
+      noEmailContact,
+      null,
+      75
+    );
+
+    return new Map<String, Opportunity>{
+      'success' => successOpp,
+      'acknowledged' => acknowledgedOpp,
+      'noContact' => noContactOpp,
+      'noEmail' => noEmailOpp
+    };
+  }
+
+  /**
+   * Query opportunity with acknowledgment date field
+   */
+  private static Opportunity queryOpportunityWithAckDate(Id oppId) {
+    return [
+      SELECT Id, npsp__Acknowledgment_Date__c
+      FROM Opportunity
+      WHERE Id = :oppId
+      LIMIT 1
+    ];
+  }
+
+  /**
+   * Query opportunities with acknowledgment date field
+   */
+  private static List<Opportunity> queryOpportunitiesWithAckDate(
+    List<Id> oppIds
+  ) {
+    return [
+      SELECT Id, Name, npsp__Acknowledgment_Date__c
+      FROM Opportunity
+      WHERE Id IN :oppIds
+      ORDER BY Name
+    ];
+  }
+
+  /**
+   * Query opportunities with all fields needed for service calls
+   */
+  private static List<Opportunity> queryOpportunitiesFullFields(
+    List<Id> oppIds
+  ) {
+    return [
+      SELECT
+        Id,
+        Name,
+        Amount,
+        StageName,
+        CloseDate,
+        AccountId,
+        ContactId,
+        npsp__Acknowledgment_Date__c
+      FROM Opportunity
+      WHERE Id IN :oppIds
+    ];
+  }
+
+  /**
+   * Assert that acknowledgment date is set to a specific date (captures test execution date)
+   */
+  private static void assertAcknowledgmentDateSet(Id oppId, Date expectedDate) {
+    Opportunity updatedOpp = queryOpportunityWithAckDate(oppId);
+    System.assertEquals(
+      expectedDate,
+      updatedOpp.npsp__Acknowledgment_Date__c,
+      'Acknowledgment date should be set to expected date'
+    );
+  }
+
+  /**
+   * Assert that acknowledgment date is set to today (using test execution date)
+   */
+  private static void assertAcknowledgmentDateSetToday(Id oppId) {
+    assertAcknowledgmentDateSet(oppId, Date.today());
+  }
+
+  /**
+   * Assert common detailed result counts
+   */
+  private static void assertDetailedResultCounts(
+    DonationAcknowledgementService.DetailedAckResult result,
+    Integer expectedTotal,
+    Integer expectedSent,
+    Integer expectedAcknowledged,
+    Integer expectedNoContact,
+    Integer expectedFailures
+  ) {
+    System.assertEquals(
+      expectedTotal,
+      result.totalOpportunities,
+      'Should have expected total opportunities'
+    );
+    System.assertEquals(
+      expectedSent,
+      result.emailsSent,
+      'Should have expected emails sent'
+    );
+    System.assertEquals(
+      expectedAcknowledged,
+      result.alreadyAcknowledged,
+      'Should have expected already acknowledged'
+    );
+    System.assertEquals(
+      expectedNoContact,
+      result.noValidContact,
+      'Should have expected no valid contact'
+    );
+    System.assertEquals(
+      expectedFailures,
+      result.emailSendFailures,
+      'Should have expected email failures'
+    );
+  }
+
+  /**
+   * Create a map of opportunity results by name for easy lookup in tests
+   */
+  private static Map<String, DonationAcknowledgementService.OpportunityResult> createResultsByNameMap(
+    List<DonationAcknowledgementService.OpportunityResult> results
+  ) {
+    Map<String, DonationAcknowledgementService.OpportunityResult> resultsByName = new Map<String, DonationAcknowledgementService.OpportunityResult>();
+    for (DonationAcknowledgementService.OpportunityResult result : results) {
+      resultsByName.put(result.opportunityName, result);
+    }
+    return resultsByName;
+  }
+
+  /**
+   * Assert opportunity result by name with expected status and partial reason match
+   */
+  private static void assertOpportunityResult(
+    Map<String, DonationAcknowledgementService.OpportunityResult> resultsByName,
+    String oppName,
+    DonationAcknowledgementService.AckStatus expectedStatus,
+    String reasonContains
+  ) {
+    DonationAcknowledgementService.OpportunityResult result = resultsByName.get(
+      oppName
+    );
+    System.assertNotEquals(null, result, 'Should have result for ' + oppName);
+    System.assertEquals(
+      expectedStatus,
+      result.status,
+      'Should have expected status for ' + oppName
+    );
+    if (String.isNotBlank(reasonContains)) {
+      System.assert(
+        result.reason.contains(reasonContains),
+        'Reason should contain expected text for ' + oppName
+      );
+    }
+  }
+
+  // ===== END HELPER METHODS =====
+
   @isTest
   static void testSendAcknowledgementsWithTemplate() {
     Opportunity opp = [SELECT Id FROM Opportunity LIMIT 1];
-    DonationAcknowledgementService.OpportunityIdWrapper wrapper = new DonationAcknowledgementService.OpportunityIdWrapper();
-    wrapper.opportunityIds = new List<Id>{ opp.Id };
-    List<DonationAcknowledgementService.OpportunityIdWrapper> input = new List<DonationAcknowledgementService.OpportunityIdWrapper>{
-      wrapper
-    };
+    List<DonationAcknowledgementService.OpportunityIdWrapper> input = createWrapperInput(
+      new List<Id>{ opp.Id }
+    );
+
     Test.startTest();
     List<DonationAcknowledgementService.AckResultWrapper> result = DonationAcknowledgementService.sendAcknowledgementsInvocable(
       input
     );
     Test.stopTest();
+
     System.assertEquals(1, result.size());
     System.assert(result[0].result.contains('Emails sent: 1'));
+
     // Verify acknowledgement date is set
-    Opportunity updatedOpp = [
-      SELECT Id, npsp__Acknowledgment_Date__c
-      FROM Opportunity
-      WHERE Id = :opp.Id
-    ];
-    System.assertEquals(
-      Date.today(), // FIXME: Fragile test, will break if run on a different day
-      updatedOpp.npsp__Acknowledgment_Date__c,
-      'Acknowledgement date should be set to today'
-    );
+    assertAcknowledgmentDateSetToday(opp.Id); // FIXME: Fragile test, will break if run on a different day
   }
 
   @isTest
@@ -56,44 +310,37 @@ private class DonationAcknowledgementServiceTest {
     // Set template devname/folder to values that do not exist to force fallback
     DonationAcknowledgementService.donationAckTemplateDevName = 'DoesNotExistTemplate';
     DonationAcknowledgementService.donationAckTemplateFolder = 'DoesNotExistFolder';
+
     Opportunity opp = [SELECT Id FROM Opportunity LIMIT 1];
-    DonationAcknowledgementService.OpportunityIdWrapper wrapper = new DonationAcknowledgementService.OpportunityIdWrapper();
-    wrapper.opportunityIds = new List<Id>{ opp.Id };
-    List<DonationAcknowledgementService.OpportunityIdWrapper> input = new List<DonationAcknowledgementService.OpportunityIdWrapper>{
-      wrapper
-    };
+    List<DonationAcknowledgementService.OpportunityIdWrapper> input = createWrapperInput(
+      new List<Id>{ opp.Id }
+    );
+
     Test.startTest();
     List<DonationAcknowledgementService.AckResultWrapper> result = DonationAcknowledgementService.sendAcknowledgementsInvocable(
       input
     );
     Test.stopTest();
+
     System.assertEquals(1, result.size());
     System.assert(result[0].result.contains('Static content fallback'));
+
     // Verify acknowledgement date is set
-    Opportunity updatedOpp = [
-      SELECT Id, npsp__Acknowledgment_Date__c
-      FROM Opportunity
-      WHERE Id = :opp.Id
-    ];
-    System.assertEquals(
-      Date.today(), // FIXME: Fragile test, will break if run on a different day
-      updatedOpp.npsp__Acknowledgment_Date__c,
-      'Acknowledgement date should be set to today'
-    );
+    assertAcknowledgmentDateSetToday(opp.Id); // FIXME: Fragile test, will break if run on a different day
   }
 
   @isTest
   static void testNoOpportunities() {
-    DonationAcknowledgementService.OpportunityIdWrapper wrapper = new DonationAcknowledgementService.OpportunityIdWrapper();
-    wrapper.opportunityIds = new List<Id>();
-    List<DonationAcknowledgementService.OpportunityIdWrapper> input = new List<DonationAcknowledgementService.OpportunityIdWrapper>{
-      wrapper
-    };
+    List<DonationAcknowledgementService.OpportunityIdWrapper> input = createWrapperInput(
+      new List<Id>()
+    );
+
     Test.startTest();
     List<DonationAcknowledgementService.AckResultWrapper> result = DonationAcknowledgementService.sendAcknowledgementsInvocable(
       input
     );
     Test.stopTest();
+
     System.assertEquals(1, result.size());
     System.assertEquals('No Opportunity IDs provided.', result[0].result);
   }
@@ -101,11 +348,9 @@ private class DonationAcknowledgementServiceTest {
   @isTest
   static void testEmailSendingFailureDoesNotUpdateAcknowledgmentDate() {
     // This test verifies that if email sending fails, acknowledgment dates are not updated
-    Opportunity opp = [
-      SELECT Id, npsp__Acknowledgment_Date__c
-      FROM Opportunity
-      LIMIT 1
-    ];
+    Opportunity opp = queryOpportunityWithAckDate(
+      [SELECT Id FROM Opportunity LIMIT 1].Id
+    );
 
     // Verify opportunity starts without acknowledgment date
     System.assertEquals(
@@ -132,16 +377,7 @@ private class DonationAcknowledgementServiceTest {
       );
 
       // Verify acknowledgment date was set on success
-      Opportunity updatedOpp = [
-        SELECT Id, npsp__Acknowledgment_Date__c
-        FROM Opportunity
-        WHERE Id = :opp.Id
-      ];
-      System.assertEquals(
-        Date.today(),
-        updatedOpp.npsp__Acknowledgment_Date__c,
-        'Acknowledgment date should be set on successful send'
-      );
+      assertAcknowledgmentDateSetToday(opp.Id);
     } catch (AuraHandledException e) {
       // If email sending failed (unlikely in test context), verify acknowledgment date was not set
       System.assert(
@@ -149,11 +385,7 @@ private class DonationAcknowledgementServiceTest {
         'Exception should indicate email sending failure'
       );
 
-      Opportunity updatedOpp = [
-        SELECT Id, npsp__Acknowledgment_Date__c
-        FROM Opportunity
-        WHERE Id = :opp.Id
-      ];
+      Opportunity updatedOpp = queryOpportunityWithAckDate(opp.Id);
       System.assertEquals(
         null,
         updatedOpp.npsp__Acknowledgment_Date__c,
@@ -169,19 +401,9 @@ private class DonationAcknowledgementServiceTest {
     // Note: In test context, we can't create actual EmailTemplate records,
     // so this test will verify the method executes but may not send actual emails
     Opportunity opp = [SELECT Id FROM Opportunity LIMIT 1];
-    List<Opportunity> opps = [
-      SELECT
-        Id,
-        Name,
-        Amount,
-        StageName,
-        CloseDate,
-        AccountId,
-        ContactId,
-        npsp__Acknowledgment_Date__c
-      FROM Opportunity
-      WHERE Id = :opp.Id
-    ];
+    List<Opportunity> opps = queryOpportunitiesFullFields(
+      new List<Id>{ opp.Id }
+    );
 
     // Use a realistic looking template ID format
     Id mockTemplateId = '00X000000000000AAA'; // Mock template ID in correct format
@@ -211,19 +433,9 @@ private class DonationAcknowledgementServiceTest {
   static void testSendEmailsCoreWithStaticConfig() {
     // Test the core method directly with static content configuration
     Opportunity opp = [SELECT Id FROM Opportunity LIMIT 1];
-    List<Opportunity> opps = [
-      SELECT
-        Id,
-        Name,
-        Amount,
-        StageName,
-        CloseDate,
-        AccountId,
-        ContactId,
-        npsp__Acknowledgment_Date__c
-      FROM Opportunity
-      WHERE Id = :opp.Id
-    ];
+    List<Opportunity> opps = queryOpportunitiesFullFields(
+      new List<Id>{ opp.Id }
+    );
 
     Test.startTest();
     Integer result = DonationAcknowledgementService.sendEmailsCore(
@@ -239,16 +451,7 @@ private class DonationAcknowledgementServiceTest {
     System.assertEquals(1, result, 'Should process one opportunity');
 
     // Verify acknowledgment date was set
-    Opportunity updatedOpp = [
-      SELECT Id, npsp__Acknowledgment_Date__c
-      FROM Opportunity
-      WHERE Id = :opp.Id
-    ];
-    System.assertEquals(
-      Date.today(),
-      updatedOpp.npsp__Acknowledgment_Date__c,
-      'Acknowledgment date should be set'
-    );
+    assertAcknowledgmentDateSetToday(opp.Id);
   }
 
   @isTest
@@ -257,25 +460,14 @@ private class DonationAcknowledgementServiceTest {
     Contact c = [SELECT Id FROM Contact LIMIT 1];
 
     // Create two opportunities - one already acknowledged, one not
-    Opportunity acknowledgedOpp = new Opportunity(
-      Name = 'Already Acknowledged Opp',
-      StageName = 'Closed Won',
-      CloseDate = Date.today().addDays(-1),
-      Amount = 200,
-      ContactId = c.Id,
-      npsp__Acknowledgment_Date__c = Date.today().addDays(-1) // Already acknowledged
+    Opportunity acknowledgedOpp = createTestOpportunity(
+      'Already Acknowledged Opp',
+      c,
+      Date.today().addDays(-1), // Already acknowledged
+      200
     );
 
-    Opportunity newOpp = new Opportunity(
-      Name = 'New Opp',
-      StageName = 'Closed Won',
-      CloseDate = Date.today(),
-      Amount = 100,
-      ContactId = c.Id
-      // No acknowledgment date - should be processed
-    );
-
-    insert new List<Opportunity>{ acknowledgedOpp, newOpp };
+    Opportunity newOpp = createTestOpportunity('New Opp', c, null, 100);
 
     List<Id> oppIds = new List<Id>{ acknowledgedOpp.Id, newOpp.Id };
 
@@ -298,12 +490,7 @@ private class DonationAcknowledgementServiceTest {
     );
 
     // Verify only the new opportunity got acknowledgment date updated
-    List<Opportunity> updatedOpps = [
-      SELECT Id, Name, npsp__Acknowledgment_Date__c
-      FROM Opportunity
-      WHERE Id IN :oppIds
-      ORDER BY Name
-    ];
+    List<Opportunity> updatedOpps = queryOpportunitiesWithAckDate(oppIds);
 
     // Already acknowledged opp should keep its original date
     System.assertEquals(
@@ -313,11 +500,7 @@ private class DonationAcknowledgementServiceTest {
     );
 
     // New opp should get today's date
-    System.assertEquals(
-      Date.today(),
-      updatedOpps[1].npsp__Acknowledgment_Date__c,
-      'New opp should get acknowledgment date set to today'
-    );
+    assertAcknowledgmentDateSetToday(updatedOpps[1].Id); // FIXME: Fragile test, will break if run on a different day
   }
 
   @isTest
@@ -325,15 +508,12 @@ private class DonationAcknowledgementServiceTest {
     // Test scenario where all opportunities are already acknowledged
     Contact c = [SELECT Id FROM Contact LIMIT 1];
 
-    Opportunity acknowledgedOpp = new Opportunity(
-      Name = 'Already Acknowledged Opp',
-      StageName = 'Closed Won',
-      CloseDate = Date.today().addDays(-1),
-      Amount = 100,
-      ContactId = c.Id,
-      npsp__Acknowledgment_Date__c = Date.today().addDays(-1)
+    Opportunity acknowledgedOpp = createTestOpportunity(
+      'Already Acknowledged Opp',
+      c,
+      Date.today().addDays(-1), // Already acknowledged
+      100
     );
-    insert acknowledgedOpp;
 
     List<Id> oppIds = new List<Id>{ acknowledgedOpp.Id };
 
@@ -356,49 +536,15 @@ private class DonationAcknowledgementServiceTest {
   @isTest
   static void testSendEmailsCoreWithResultReturnsMigratedFunctionality() {
     // Test that legacy functionality is now handled by DetailedAckResult
-    Contact c = [SELECT Id FROM Contact LIMIT 1];
+    Map<String, Opportunity> testOpps = createMixedScenarioOpportunities();
 
-    // Create mixed scenario: acknowledged, new, and no contact
-    Opportunity acknowledgedOpp = new Opportunity(
-      Name = 'Acknowledged Opp',
-      StageName = 'Closed Won',
-      CloseDate = Date.today(),
-      Amount = 100,
-      ContactId = c.Id,
-      npsp__Acknowledgment_Date__c = Date.today().addDays(-1)
+    List<Opportunity> opps = queryOpportunitiesFullFields(
+      new List<Id>{
+        testOpps.get('acknowledged').Id,
+        testOpps.get('success').Id,
+        testOpps.get('noContact').Id
+      }
     );
-
-    Opportunity newOpp = new Opportunity(
-      Name = 'New Opp',
-      StageName = 'Closed Won',
-      CloseDate = Date.today(),
-      Amount = 200,
-      ContactId = c.Id
-    );
-
-    Opportunity noContactOpp = new Opportunity(
-      Name = 'No Contact Opp',
-      StageName = 'Closed Won',
-      CloseDate = Date.today(),
-      Amount = 150
-      // No ContactId
-    );
-
-    insert new List<Opportunity>{ acknowledgedOpp, newOpp, noContactOpp };
-
-    List<Opportunity> opps = [
-      SELECT
-        Id,
-        Name,
-        Amount,
-        StageName,
-        CloseDate,
-        AccountId,
-        ContactId,
-        npsp__Acknowledgment_Date__c
-      FROM Opportunity
-      WHERE Id IN (:acknowledgedOpp.Id, :newOpp.Id, :noContactOpp.Id)
-    ];
 
     DonationAcknowledgementService.EmailConfig config = new DonationAcknowledgementService.EmailConfig(
       'Test Subject',
@@ -414,33 +560,13 @@ private class DonationAcknowledgementServiceTest {
     Test.stopTest();
 
     // Verify detailed counts (same functionality, richer data structure)
-    System.assertEquals(
-      3,
-      result.totalOpportunities,
-      'Should have 3 total opportunities'
-    );
-    System.assertEquals(1, result.emailsSent, 'Should send 1 email');
-    System.assertEquals(
-      1,
-      result.alreadyAcknowledged,
-      'Should have 1 already acknowledged'
-    );
-    System.assertEquals(
-      1,
-      result.noValidContact,
-      'Should have 1 with no valid contact'
-    );
+    assertDetailedResultCounts(result, 3, 1, 1, 1, 0);
 
     // Verify enhanced functionality not available in old EmailSendResult
     System.assertEquals(
       3,
       result.opportunityResults.size(),
       'Should have individual opportunity results'
-    );
-    System.assertEquals(
-      0,
-      result.emailSendFailures,
-      'Should track email failures'
     );
 
     // Verify summary message
@@ -655,37 +781,12 @@ private class DonationAcknowledgementServiceTest {
     // Test the detailed core method with successful opportunities
     Contact c = [SELECT Id FROM Contact LIMIT 1];
 
-    Opportunity opp1 = new Opportunity(
-      Name = 'Success Opp 1',
-      StageName = 'Closed Won',
-      CloseDate = Date.today(),
-      Amount = 100,
-      ContactId = c.Id
+    Opportunity opp1 = createTestOpportunity('Success Opp 1', c, null, 100);
+    Opportunity opp2 = createTestOpportunity('Success Opp 2', c, null, 200);
+
+    List<Opportunity> opps = queryOpportunitiesFullFields(
+      new List<Id>{ opp1.Id, opp2.Id }
     );
-
-    Opportunity opp2 = new Opportunity(
-      Name = 'Success Opp 2',
-      StageName = 'Closed Won',
-      CloseDate = Date.today(),
-      Amount = 200,
-      ContactId = c.Id
-    );
-
-    insert new List<Opportunity>{ opp1, opp2 };
-
-    List<Opportunity> opps = [
-      SELECT
-        Id,
-        Name,
-        Amount,
-        StageName,
-        CloseDate,
-        AccountId,
-        ContactId,
-        npsp__Acknowledgment_Date__c
-      FROM Opportunity
-      WHERE Id IN (:opp1.Id, :opp2.Id)
-    ];
 
     DonationAcknowledgementService.EmailConfig config = new DonationAcknowledgementService.EmailConfig(
       'Test Subject',
@@ -700,27 +801,7 @@ private class DonationAcknowledgementServiceTest {
     Test.stopTest();
 
     // Verify detailed results
-    System.assertEquals(
-      2,
-      result.totalOpportunities,
-      'Should have 2 total opportunities'
-    );
-    System.assertEquals(2, result.emailsSent, 'Should have sent 2 emails');
-    System.assertEquals(
-      0,
-      result.alreadyAcknowledged,
-      'Should have 0 already acknowledged'
-    );
-    System.assertEquals(
-      0,
-      result.noValidContact,
-      'Should have 0 no valid contact'
-    );
-    System.assertEquals(
-      0,
-      result.emailSendFailures,
-      'Should have 0 email failures'
-    );
+    assertDetailedResultCounts(result, 2, 2, 0, 0, 0);
 
     // Verify individual opportunity results
     System.assertEquals(
@@ -755,90 +836,28 @@ private class DonationAcknowledgementServiceTest {
     }
 
     // Verify acknowledgment dates were set in database
-    List<Opportunity> updatedOpps = [
-      SELECT Id, npsp__Acknowledgment_Date__c
-      FROM Opportunity
-      WHERE Id IN (:opp1.Id, :opp2.Id)
-    ];
+    List<Opportunity> updatedOpps = queryOpportunitiesWithAckDate(
+      new List<Id>{ opp1.Id, opp2.Id }
+    );
 
     for (Opportunity updatedOpp : updatedOpps) {
-      System.assertEquals(
-        Date.today(),
-        updatedOpp.npsp__Acknowledgment_Date__c,
-        'Should have acknowledgment date set in database'
-      );
+      assertAcknowledgmentDateSetToday(updatedOpp.Id);
     }
   }
 
   @isTest
   static void testSendEmailsCoreDetailedWithMixedScenarios() {
     // Test detailed method with various scenarios
-    Contact c = [SELECT Id FROM Contact LIMIT 1];
+    Map<String, Opportunity> testOpps = createMixedScenarioOpportunities();
 
-    // Create opportunities with different scenarios
-    Opportunity successOpp = new Opportunity(
-      Name = 'Success Opp',
-      StageName = 'Closed Won',
-      CloseDate = Date.today(),
-      Amount = 100,
-      ContactId = c.Id
+    List<Opportunity> opps = queryOpportunitiesFullFields(
+      new List<Id>{
+        testOpps.get('success').Id,
+        testOpps.get('acknowledged').Id,
+        testOpps.get('noContact').Id,
+        testOpps.get('noEmail').Id
+      }
     );
-
-    Opportunity acknowledgedOpp = new Opportunity(
-      Name = 'Already Acknowledged Opp',
-      StageName = 'Closed Won',
-      CloseDate = Date.today().addDays(-1),
-      Amount = 200,
-      ContactId = c.Id,
-      npsp__Acknowledgment_Date__c = Date.today().addDays(-1)
-    );
-
-    Opportunity noContactOpp = new Opportunity(
-      Name = 'No Contact Opp',
-      StageName = 'Closed Won',
-      CloseDate = Date.today(),
-      Amount = 150
-      // No ContactId
-    );
-
-    insert new List<Opportunity>{ successOpp, acknowledgedOpp, noContactOpp };
-
-    // Create contact with no email for testing
-    Contact noEmailContact = new Contact(
-      FirstName = 'No Email',
-      LastName = 'Contact'
-      // No Email field
-    );
-    insert noEmailContact;
-
-    Opportunity noEmailOpp = new Opportunity(
-      Name = 'No Email Opp',
-      StageName = 'Closed Won',
-      CloseDate = Date.today(),
-      Amount = 75,
-      ContactId = noEmailContact.Id
-    );
-    insert noEmailOpp;
-
-    List<Opportunity> opps = [
-      SELECT
-        Id,
-        Name,
-        Amount,
-        StageName,
-        CloseDate,
-        AccountId,
-        ContactId,
-        npsp__Acknowledgment_Date__c
-      FROM Opportunity
-      WHERE
-        Id IN (
-          :successOpp.Id,
-          :acknowledgedOpp.Id,
-          :noContactOpp.Id,
-          :noEmailOpp.Id
-        )
-    ];
 
     DonationAcknowledgementService.EmailConfig config = new DonationAcknowledgementService.EmailConfig(
       'Test Subject',
@@ -853,27 +872,7 @@ private class DonationAcknowledgementServiceTest {
     Test.stopTest();
 
     // Verify aggregated counts
-    System.assertEquals(
-      4,
-      result.totalOpportunities,
-      'Should have 4 total opportunities'
-    );
-    System.assertEquals(1, result.emailsSent, 'Should have sent 1 email');
-    System.assertEquals(
-      1,
-      result.alreadyAcknowledged,
-      'Should have 1 already acknowledged'
-    );
-    System.assertEquals(
-      2,
-      result.noValidContact,
-      'Should have 2 no valid contact (no contact + no email)'
-    );
-    System.assertEquals(
-      0,
-      result.emailSendFailures,
-      'Should have 0 email failures'
-    );
+    assertDetailedResultCounts(result, 4, 1, 1, 2, 0);
 
     // Verify individual results by status
     List<DonationAcknowledgementService.OpportunityResult> successfulResults = result.getSuccessfulResults();
@@ -899,60 +898,34 @@ private class DonationAcknowledgementServiceTest {
       'Should have 3 skipped results'
     );
 
-    // Find and verify specific skipped results
-    Map<String, DonationAcknowledgementService.OpportunityResult> resultsByName = new Map<String, DonationAcknowledgementService.OpportunityResult>();
-    for (
-      DonationAcknowledgementService.OpportunityResult oppResult : result.opportunityResults
-    ) {
-      resultsByName.put(oppResult.opportunityName, oppResult);
-    }
+    // Find and verify specific skipped results using helper
+    Map<String, DonationAcknowledgementService.OpportunityResult> resultsByName = createResultsByNameMap(
+      result.opportunityResults
+    );
 
     // Verify already acknowledged opportunity
-    DonationAcknowledgementService.OpportunityResult acknowledgedResult = resultsByName.get(
-      'Already Acknowledged Opp'
-    );
-    System.assertNotEquals(
-      null,
-      acknowledgedResult,
-      'Should have acknowledged result'
-    );
-    System.assertEquals(
+    assertOpportunityResult(
+      resultsByName,
+      'Already Acknowledged Opp',
       DonationAcknowledgementService.AckStatus.ALREADY_ACKNOWLEDGED,
-      acknowledgedResult.status
-    );
-    System.assert(
-      acknowledgedResult.reason.contains('already acknowledged'),
-      'Should have appropriate reason'
+      'already acknowledged'
     );
 
     // Verify no contact opportunity
-    DonationAcknowledgementService.OpportunityResult noContactResult = resultsByName.get(
-      'No Contact Opp'
-    );
-    System.assertNotEquals(
-      null,
-      noContactResult,
-      'Should have no contact result'
-    );
-    System.assertEquals(
+    assertOpportunityResult(
+      resultsByName,
+      'No Contact Opp',
       DonationAcknowledgementService.AckStatus.NO_CONTACT,
-      noContactResult.status
-    );
-    System.assertEquals(
-      'Opportunity has no associated Contact',
-      noContactResult.reason
+      'Opportunity has no associated Contact'
     );
 
     // Verify no email opportunity
-    DonationAcknowledgementService.OpportunityResult noEmailResult = resultsByName.get(
-      'No Email Opp'
-    );
-    System.assertNotEquals(null, noEmailResult, 'Should have no email result');
-    System.assertEquals(
+    assertOpportunityResult(
+      resultsByName,
+      'No Email Opp',
       DonationAcknowledgementService.AckStatus.NO_EMAIL,
-      noEmailResult.status
+      'Contact has no email address'
     );
-    System.assertEquals('Contact has no email address', noEmailResult.reason);
   }
 
   @isTest
@@ -997,27 +970,7 @@ private class DonationAcknowledgementServiceTest {
     Test.stopTest();
 
     // Verify DetailedAckResult structure and content
-    System.assertEquals(
-      1,
-      result.totalOpportunities,
-      'Should have 1 total opportunity'
-    );
-    System.assertEquals(1, result.emailsSent, 'Should have sent 1 email');
-    System.assertEquals(
-      0,
-      result.alreadyAcknowledged,
-      'Should have 0 already acknowledged'
-    );
-    System.assertEquals(
-      0,
-      result.noValidContact,
-      'Should have 0 no valid contact'
-    );
-    System.assertEquals(
-      0,
-      result.emailSendFailures,
-      'Should have 0 email failures'
-    );
+    assertDetailedResultCounts(result, 1, 1, 0, 0, 0);
     System.assert(
       result.emailType.contains('Template used'),
       'Should indicate template usage'
@@ -1057,16 +1010,7 @@ private class DonationAcknowledgementServiceTest {
     );
 
     // Verify acknowledgment date was set in database
-    Opportunity updatedOpp = [
-      SELECT Id, npsp__Acknowledgment_Date__c
-      FROM Opportunity
-      WHERE Id = :opp.Id
-    ];
-    System.assertEquals(
-      Date.today(),
-      updatedOpp.npsp__Acknowledgment_Date__c,
-      'Should have acknowledgment date set in database'
-    );
+    assertAcknowledgmentDateSetToday(opp.Id);
   }
 
   @isTest
@@ -1085,12 +1029,7 @@ private class DonationAcknowledgementServiceTest {
     Test.stopTest();
 
     // Verify fallback to static content
-    System.assertEquals(
-      1,
-      result.totalOpportunities,
-      'Should have 1 total opportunity'
-    );
-    System.assertEquals(1, result.emailsSent, 'Should have sent 1 email');
+    assertDetailedResultCounts(result, 1, 1, 0, 0, 0);
     System.assert(
       result.emailType.contains('Static content fallback'),
       'Should indicate static fallback'
@@ -1122,12 +1061,7 @@ private class DonationAcknowledgementServiceTest {
     Test.stopTest();
 
     // Verify graceful handling of empty input
-    System.assertEquals(
-      0,
-      result.totalOpportunities,
-      'Should have 0 total opportunities'
-    );
-    System.assertEquals(0, result.emailsSent, 'Should have sent 0 emails');
+    assertDetailedResultCounts(result, 0, 0, 0, 0, 0);
     System.assertEquals(
       0,
       result.opportunityResults.size(),
@@ -1146,24 +1080,13 @@ private class DonationAcknowledgementServiceTest {
     Contact c = [SELECT Id FROM Contact LIMIT 1];
 
     // Create mixed scenario opportunities
-    Opportunity successOpp = new Opportunity(
-      Name = 'Success Opp',
-      StageName = 'Closed Won',
-      CloseDate = Date.today(),
-      Amount = 100,
-      ContactId = c.Id
+    Opportunity successOpp = createTestOpportunity('Success Opp', c, null, 100);
+    Opportunity acknowledgedOpp = createTestOpportunity(
+      'Already Acknowledged Opp',
+      c,
+      Date.today().addDays(-1), // Already acknowledged
+      200
     );
-
-    Opportunity acknowledgedOpp = new Opportunity(
-      Name = 'Already Acknowledged Opp',
-      StageName = 'Closed Won',
-      CloseDate = Date.today().addDays(-1),
-      Amount = 200,
-      ContactId = c.Id,
-      npsp__Acknowledgment_Date__c = Date.today().addDays(-1)
-    );
-
-    insert new List<Opportunity>{ successOpp, acknowledgedOpp };
 
     List<Id> oppIds = new List<Id>{ successOpp.Id, acknowledgedOpp.Id };
 
@@ -1176,40 +1099,30 @@ private class DonationAcknowledgementServiceTest {
     // Verify LWC consumption compatibility
     System.assertEquals(2, results.size(), 'Should have 2 opportunity results');
 
-    // Find results by opportunity name
-    Map<String, DonationAcknowledgementService.OpportunityResult> resultsByName = new Map<String, DonationAcknowledgementService.OpportunityResult>();
-    for (DonationAcknowledgementService.OpportunityResult result : results) {
-      resultsByName.put(result.opportunityName, result);
-    }
+    // Find results by opportunity name using helper
+    Map<String, DonationAcknowledgementService.OpportunityResult> resultsByName = createResultsByNameMap(
+      results
+    );
 
     // Verify successful opportunity
+    assertOpportunityResult(
+      resultsByName,
+      'Success Opp',
+      DonationAcknowledgementService.AckStatus.SUCCESS,
+      'Email sent successfully'
+    );
+
     DonationAcknowledgementService.OpportunityResult successResult = resultsByName.get(
       'Success Opp'
     );
-    System.assertNotEquals(null, successResult, 'Should have success result');
-    System.assertEquals(
-      DonationAcknowledgementService.AckStatus.SUCCESS,
-      successResult.status
-    );
-    System.assertEquals('Email sent successfully', successResult.reason);
     System.assertEquals('testuser@example.com', successResult.contactEmail);
 
     // Verify already acknowledged opportunity
-    DonationAcknowledgementService.OpportunityResult acknowledgedResult = resultsByName.get(
-      'Already Acknowledged Opp'
-    );
-    System.assertNotEquals(
-      null,
-      acknowledgedResult,
-      'Should have acknowledged result'
-    );
-    System.assertEquals(
+    assertOpportunityResult(
+      resultsByName,
+      'Already Acknowledged Opp',
       DonationAcknowledgementService.AckStatus.ALREADY_ACKNOWLEDGED,
-      acknowledgedResult.status
-    );
-    System.assert(
-      acknowledgedResult.reason.contains('already acknowledged'),
-      'Should have appropriate reason'
+      'already acknowledged'
     );
   }
 
